--- a/AgencijaSprint/de/index.html
+++ b/AgencijaSprint/de/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sprint Marketing Agency - Digitalna Marketing Agencija</title>
+    <title>Sprint Marketing Agency - Digitale Marketing Agentur</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -114,7 +114,7 @@
     <!-- Navigacija -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 Sprint Marketing Agentur
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -123,30 +123,24 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#pocetna">Početna</a>
+                        <a class="nav-link active" href="#pocetna">Start</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            Usluge
+                            Leistungen
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="seo.html">SEO Optimizacija</a></li>
-                            <li><a class="dropdown-item" href="ppc.html">PPC Kampanje</a></li>
-                            <li><a class="dropdown-item" href="social.html">Društvene Mreže</a></li>
-                            <li><a class="dropdown-item" href="webdev.html">Web Development</a></li>
+                            <li><a class="dropdown-item" href="seo.html">SEO Optimierung</a></li>
+                            <li><a class="dropdown-item" href="ppc.html">PPC Kampagnen</a></li>
+                            <li><a class="dropdown-item" href="social.html">Social Media</a></li>
+                            <li><a class="dropdown-item" href="webdev.html">Webentwicklung</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#o-nama">O nama</a>
+                        <a class="nav-link" href="#o-nama">Über uns</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#kontakt">Kontakt</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="de/index.html">
-                            <img src="https://flagcdn.com/20x15/de.png" alt="Deutsch" class="me-1">
-                            DE
-                        </a>
                     </li>
                 </ul>
             </div>
@@ -158,9 +152,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <h1 class="display-4">Digitalni Marketing za Vaš Uspeh</h1>
-                    <p class="lead">Povećajte vidljivost vašeg brenda i dostignite nove klijente kroz digitalne kanale</p>
-                    <a href="#kontakt" class="btn btn-primary btn-lg">Kontaktirajte nas</a>
+                    <h1 class="display-4">Digitales Marketing für Ihren Erfolg</h1>
+                    <p class="lead">Steigern Sie die Sichtbarkeit Ihrer Marke und erreichen Sie neue Kunden über digitale Kanäle</p>
+                    <a href="#kontakt" class="btn btn-primary btn-lg">Kontaktieren Sie uns</a>
                 </div>
             </div>
         </div>
@@ -169,20 +163,20 @@
     <!-- Usluge -->
     <section id="usluge" class="section-padding">
         <div class="container">
-            <h2 class="text-center mb-5">Naše Usluge</h2>
+            <h2 class="text-center mb-5">Unsere Leistungen</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="card service-card">
                         <div class="card-body text-center">
                             <i class="fas fa-code fa-3x mb-3 text-primary"></i>
-                            <h4>Web Development</h4>
-                            <p>Izrada modernih i responzivnih web sajtova po vašoj meri</p>
+                            <h4>Webentwicklung</h4>
+                            <p>Entwicklung moderner und responsiver Websites nach Ihren Wünschen</p>
                             <ul class="list-unstyled text-start">
-                                <li><i class="fas fa-check text-success me-2"></i>Landing stranice</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Poslovni sajtovi</li>
-                                <li><i class="fas fa-check text-success me-2"></i>E-commerce rešenja</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Landing Pages</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Business Websites</li>
+                                <li><i class="fas fa-check text-success me-2"></i>E-Commerce Lösungen</li>
                             </ul>
-                            <a href="webdev.html" class="btn btn-outline-primary mt-3">Saznaj više</a>
+                            <a href="webdev.html" class="btn btn-outline-primary mt-3">Mehr erfahren</a>
                         </div>
                     </div>
                 </div>
@@ -191,13 +185,13 @@
                         <div class="card-body text-center">
                             <i class="fas fa-ad fa-3x mb-3 text-primary"></i>
                             <h4>Google Ads</h4>
-                            <p>Profesionalno vođenje Google Ads kampanja</p>
+                            <p>Professionelles Management von Google Ads Kampagnen</p>
                             <ul class="list-unstyled text-start">
-                                <li><i class="fas fa-check text-success me-2"></i>Search kampanje</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Display oglašavanje</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Shopping kampanje</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Search Kampagnen</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Display Werbung</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Shopping Kampagnen</li>
                             </ul>
-                            <a href="ppc.html" class="btn btn-outline-primary mt-3">Saznaj više</a>
+                            <a href="ppc.html" class="btn btn-outline-primary mt-3">Mehr erfahren</a>
                         </div>
                     </div>
                 </div>
@@ -206,13 +200,13 @@
                         <div class="card-body text-center">
                             <i class="fas fa-bullhorn fa-3x mb-3 text-primary"></i>
                             <h4>Meta Ads</h4>
-                            <p>Facebook & Instagram oglašavanje</p>
+                            <p>Facebook & Instagram Werbung</p>
                             <ul class="list-unstyled text-start">
-                                <li><i class="fas fa-check text-success me-2"></i>Facebook oglasi</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Instagram kampanje</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Facebook Anzeigen</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Instagram Kampagnen</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Remarketing</li>
                             </ul>
-                            <a href="social.html" class="btn btn-outline-primary mt-3">Saznaj više</a>
+                            <a href="social.html" class="btn btn-outline-primary mt-3">Mehr erfahren</a>
                         </div>
                     </div>
                 </div>
@@ -220,14 +214,14 @@
                     <div class="card service-card">
                         <div class="card-body text-center">
                             <i class="fas fa-search fa-3x mb-3 text-primary"></i>
-                            <h4>SEO Optimizacija</h4>
-                            <p>Optimizacija za pretraživače</p>
+                            <h4>SEO Optimierung</h4>
+                            <p>Suchmaschinenoptimierung</p>
                             <ul class="list-unstyled text-start">
                                 <li><i class="fas fa-check text-success me-2"></i>On-page SEO</li>
                                 <li><i class="fas fa-check text-success me-2"></i>Off-page SEO</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Tehnička optimizacija</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Technische Optimierung</li>
                             </ul>
-                            <a href="seo.html" class="btn btn-outline-primary mt-3">Saznaj više</a>
+                            <a href="seo.html" class="btn btn-outline-primary mt-3">Mehr erfahren</a>
                         </div>
                     </div>
                 </div>
@@ -235,14 +229,14 @@
                     <div class="card service-card">
                         <div class="card-body text-center">
                             <i class="fas fa-chart-line fa-3x mb-3 text-primary"></i>
-                            <h4>Marketing Strategija</h4>
-                            <p>Razvoj digitalne marketing strategije</p>
+                            <h4>Marketing Strategie</h4>
+                            <p>Entwicklung digitaler Marketingstrategien</p>
                             <ul class="list-unstyled text-start">
-                                <li><i class="fas fa-check text-success me-2"></i>Analiza tržišta</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Konkurentska analiza</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Marketing plan</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Marktanalyse</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Wettbewerbsanalyse</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Marketingplan</li>
                             </ul>
-                            <a href="#kontakt" class="btn btn-outline-primary mt-3">Kontaktirajte nas</a>
+                            <a href="#kontakt" class="btn btn-outline-primary mt-3">Kontaktieren Sie uns</a>
                         </div>
                     </div>
                 </div>
@@ -250,14 +244,14 @@
                     <div class="card service-card">
                         <div class="card-body text-center">
                             <i class="fas fa-paint-brush fa-3x mb-3 text-primary"></i>
-                            <h4>Grafički Dizajn</h4>
-                            <p>Kreiranje vizuelnog identiteta</p>
+                            <h4>Grafikdesign</h4>
+                            <p>Entwicklung visueller Identität</p>
                             <ul class="list-unstyled text-start">
-                                <li><i class="fas fa-check text-success me-2"></i>Logo dizajn</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Dizajn za društvene mreže</li>
-                                <li><i class="fas fa-check text-success me-2"></i>Reklamni materijali</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Logo Design</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Social Media Design</li>
+                                <li><i class="fas fa-check text-success me-2"></i>Werbematerialien</li>
                             </ul>
-                            <a href="#kontakt" class="btn btn-outline-primary mt-3">Kontaktirajte nas</a>
+                            <a href="#kontakt" class="btn btn-outline-primary mt-3">Kontaktieren Sie uns</a>
                         </div>
                     </div>
                 </div>
@@ -270,8 +264,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h2>O Nama</h2>
-                    <p>Mi smo tim stručnjaka posvećenih digitalnom marketingu sa više od 10 godina iskustva. Naš cilj je da pomognemo vašem biznisu da raste kroz inovativne digitalne strategije.</p>
+                    <h2>Über Uns</h2>
+                    <p>Wir sind ein Team von Digital Marketing-Experten mit über 10 Jahren Erfahrung. Unser Ziel ist es, Ihr Unternehmen durch innovative digitale Strategien zum Wachstum zu verhelfen.</p>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1" class="img-fluid rounded" alt="O nama">
@@ -285,8 +279,8 @@
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-8 text-center">
-                    <h2 class="display-4 mb-3">Započnite Vaš Projekat</h2>
-                    <p class="lead text-muted">Spremni smo da Vaše ideje pretvorimo u digitalni uspeh</p>
+                    <h2 class="display-4 mb-3">Starten Sie Ihr Projekt</h2>
+                    <p class="lead text-muted">Wir sind bereit, Ihre Ideen in digitalen Erfolg umzusetzen</p>
                 </div>
             </div>
             <div class="row g-4">
@@ -294,13 +288,13 @@
                 <div class="col-lg-4">
                     <div class="card border-0 shadow-sm h-100">
                         <div class="card-body">
-                            <h4 class="mb-4">Kontakt Informacije</h4>
+                            <h4 class="mb-4">Kontaktinformationen</h4>
                             <div class="d-flex align-items-center mb-3">
                                 <div class="bg-primary rounded-circle p-3 me-3">
                                     <i class="fas fa-map-marker-alt text-white"></i>
                                 </div>
                                 <div>
-                                    <h6 class="mb-1">Adresa</h6>
+                                    <h6 class="mb-1">Adresse</h6>
                                     <p class="mb-0 text-muted">
                                         <a href="https://goo.gl/maps/YourGoogleMapsLink" target="_blank" class="text-decoration-none text-muted">
                                             Karadjordjeva 127
@@ -363,7 +357,7 @@
                     <h5 class="mb-4">
                         Sprint Marketing Agentur
                     </h5>
-                    <p class="mb-3">Vaš partner za digitalni rast i razvoj. Pretvaramo ideje u digitalni uspeh.</p>
+                    <p class="mb-3">Ihr Partner für digitales Wachstum und Entwicklung. Wir verwandeln Ideen in digitalen Erfolg.</p>
                     <div class="social-links">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
@@ -374,29 +368,29 @@
 
                 <!-- Brzi linkovi -->
                 <div class="col-lg-2">
-                    <h5 class="mb-4">Brzi Linkovi</h5>
+                    <h5 class="mb-4">Schnelllinks</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="Pocetna.html" class="text-white text-decoration-none">Početna</a></li>
-                        <li class="mb-2"><a href="#o-nama" class="text-white text-decoration-none">O nama</a></li>
-                        <li class="mb-2"><a href="#usluge" class="text-white text-decoration-none">Usluge</a></li>
+                        <li class="mb-2"><a href="Pocetna.html" class="text-white text-decoration-none">Start</a></li>
+                        <li class="mb-2"><a href="#o-nama" class="text-white text-decoration-none">Über uns</a></li>
+                        <li class="mb-2"><a href="#usluge" class="text-white text-decoration-none">Leistungen</a></li>
                         <li class="mb-2"><a href="#kontakt" class="text-white text-decoration-none">Kontakt</a></li>
                     </ul>
                 </div>
 
                 <!-- Usluge -->
                 <div class="col-lg-3">
-                    <h5 class="mb-4">Naše Usluge</h5>
+                    <h5 class="mb-4">Unsere Leistungen</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="seo.html" class="text-white text-decoration-none">SEO Optimizacija</a></li>
-                        <li class="mb-2"><a href="ppc.html" class="text-white text-decoration-none">PPC Kampanje</a></li>
-                        <li class="mb-2"><a href="social.html" class="text-white text-decoration-none">Društvene Mreže</a></li>
-                        <li class="mb-2"><a href="webdev.html" class="text-white text-decoration-none">Web Development</a></li>
+                        <li class="mb-2"><a href="seo.html" class="text-white text-decoration-none">SEO Optimierung</a></li>
+                        <li class="mb-2"><a href="ppc.html" class="text-white text-decoration-none">PPC Kampagnen</a></li>
+                        <li class="mb-2"><a href="social.html" class="text-white text-decoration-none">Social Media</a></li>
+                        <li class="mb-2"><a href="webdev.html" class="text-white text-decoration-none">Webentwicklung</a></li>
                     </ul>
                 </div>
 
                 <!-- Kontakt -->
                 <div class="col-lg-3">
-                    <h5 class="mb-4">Kontaktirajte Nas</h5>
+                    <h5 class="mb-4">Kontaktieren Sie uns</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2">
                             <i class="fas fa-map-marker-alt me-2"></i> 
@@ -412,7 +406,7 @@
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-clock me-2"></i>
-                            Pon - Pet: 09:00 - 17:00
+                            Mo - Fr: 09:00 - 17:00
                         </li>
                     </ul>
                 </div>
@@ -423,7 +417,7 @@
                 <div class="col-12">
                     <hr class="bg-light">
                     <div class="text-center mt-4">
-                        <p class="mb-0">&copy; 2025 Sprint Marketing Agentur. Sva prava zadržana.</p>
+                        <p class="mb-0">&copy; 2025 Sprint Marketing Agentur. Alle Rechte vorbehalten.</p>
                     </div>
                 </div>
             </div>
