Update link to AgencijaSprint in index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 									<span class="badge bg-secondary">JavaScript</span>
 								</div>
 								<a
-									href="sprintmarketing/index.html"
+									href="AgencijaSprint/index.html"
 									class="btn btn-outline-primary w-100"
 									target="_blank"
 									>Pogledaj Projekat</a
