--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 									>Pogledaj Projekat</a
 								>
 							</div>
-						</div>
 					</div>
+				</div>
 
 					<!-- Blog System Project -->
 					<div class="col-md-6 col-lg-4">
@@ -516,6 +516,30 @@
 			</div>
 		</div>
 	</div>
+
+					<!-- Sprint Marketing V2 Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Sprint Marketing Premium</h5>
+								<p class="card-text">
+									Napredna verzija landing stranice sa particle animacijama, portfolio sekcijom, testimonials i dark mode-om.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML5</span>
+									<span class="badge bg-info">CSS3</span>
+									<span class="badge bg-secondary">JavaScript</span>
+									<span class="badge bg-success">Canvas</span>
+								</div>
+								<a
+									href="sprintmarketing/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
