--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Sprint Marketing</h5>
 								<p class="card-text">
-									Moderna landing stranica za agenciju digitalnog marketinga sa animacijama i interaktivnim elementima.
+									Moderna landing stranica za agenciju digitalnog marketinga sa animacijama, interaktivnim elementima i potpuno responzivnim dizajnom.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -247,8 +247,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Blog System</h5>
 								<p class="card-text">
-									Dinamički blog sistem kreiran u PHP-u sa admin panelom i
-									korisničkim rolama.
+									Dinamički blog sistem kreiran u PHP-u sa admin panelom, korisničkim rolama, sistemom komentara i upravljanjem sadržajem.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -271,8 +270,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Todo Lista</h5>
 								<p class="card-text">
-									Aplikacija za upravljanje zadacima sa osnovnim CRUD
-									operacijama.
+									Aplikacija za upravljanje zadacima sa osnovnim CRUD operacijama, filtriranjem, sortiranjem i lokalnim skladištenjem podataka.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -295,8 +293,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Sistem za Rezervacije</h5>
 								<p class="card-text">
-									Sistem za upravljanje rezervacijama sa opcijama za korisnike i
-									administratore.
+									Sistem za upravljanje rezervacijama sa opcijama za korisnike i administratore, kalendarom i automatskim obaveštenjima.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -320,8 +317,7 @@
 							<div class="card-body">
 								<h5 class="card-title">CRM Sistem</h5>
 								<p class="card-text">
-									Sistem za upravljanje odnosima sa klijentima sa modulima za
-									kontakte, sastanke i prodaju.
+									Sistem za upravljanje odnosima sa klijentima sa modulima za kontakte, sastanke, prodaju i detaljnim izveštajima o aktivnostima.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -344,7 +340,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Platforma za Usluge</h5>
 								<p class="card-text">
-									Online platforma za povezivanje pružaoca usluga sa klijentima.
+									Online platforma za povezivanje pružaoca usluga sa klijentima uz recenzije, raspored termina i sistem plaćanja.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -367,8 +363,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Time Calculator</h5>
 								<p class="card-text">
-									Kalkulator za računanje vremena sa opcijama za izračunavanje
-									plus funkcionalnost alarma.
+									Kalkulator za računanje vremena sa opcijama za izračunavanje vremenskih intervala, dodavanje i oduzimanje vremena, kao i alarm.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -391,7 +386,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Univerzalni Kalkulator</h5>
 								<p class="card-text">
-									Sveobuhvatna kalkulator aplikacija: osnovni, naučni, konverter jedinica, finansijski i geometrijski kalkulator.
+									Sveobuhvatna kalkulator aplikacija sa osnovnim, naučnim, konverterom jedinica, finansijskim i geometrijskim kalkulatorom.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -414,8 +409,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Filmovi</h5>
 								<p class="card-text">
-									Web aplikacija za streaming filmova sa video player-om koji
-									podržava više streaming servisa.
+									Web aplikacija za streaming filmova sa naprednim video player-om koji podržava više streaming servisa i formata.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -438,8 +432,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Site Analytics</h5>
 								<p class="card-text">
-									Interaktivna kontrolna tabla za praćenje web analitike sa
-									prikazom statistike posetilaca.
+									Interaktivna kontrolna tabla za praćenje web analitike sa prikazom statistike posetilaca, grafikonima i izveštajima.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -463,7 +456,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Pravoslavni Kalendar</h5>
 								<p class="card-text">
-									Digitalni pravoslavni kalendar sa pregledom praznika, postova i svetaca za svaki dan u godini.
+									Digitalni pravoslavni kalendar sa pregledom praznika, postova, svetaca i podsetnicima za svaki dan u godini.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -483,7 +476,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Shark Web Player</h5>
 								<p class="card-text">
-									Online muzički player napravljen koristeći HTML5, CSS3 i JavaScript. Omogućava reprodukciju muzike, kreiranje playlist-a i osnovne kontrole za reprodukciju.
+									Online muzički player sa modernim dizajnom. Omogućava reprodukciju muzike, kreiranje playlist-a i napredne kontrole.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -503,7 +496,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Industrijski Kalkulator Proizvodnje</h5>
 								<p class="card-text">
-									Kalkulator za produkciju sa više operacija: zatvaranje mine, ubadanje, peskarenje, prese Robot, Italijanka i BEM. Automatska kalkulacija vremena završetka rada.
+									Kalkulator za industrijske procese sa više operacija i automatskom kalkulacijom vremena završetka rada po smenama.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML</span>
@@ -523,7 +516,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Sprint Marketing Premium</h5>
 								<p class="card-text">
-									Napredna verzija landing stranice sa particle animacijama, portfolio sekcijom, testimonials i dark mode-om.
+									Napredna landing stranica sa particle animacijama, portfolio sekcijom, testimonials, dark mode-om i interaktivnim efektima.
 								</p>
 								<div class="d-flex gap-2 mb-3">
 									<span class="badge bg-primary">HTML5</span>
