--- a/kalkulator-proizvodnje/ubadanje.html
+++ b/kalkulator-proizvodnje/ubadanje.html
@@ -78,6 +78,7 @@
     <script src="history-manager.js"></script>
     <script src="notifications.js"></script>
     <script src="audio-notifications.js"></script>
+    <script src="normativi.js"></script>
     <script src="ubadanje.js"></script>
 </body>
 </html>
