--- a/kalkulator-proizvodnje/peskarenje.html
+++ b/kalkulator-proizvodnje/peskarenje.html
@@ -85,6 +85,7 @@
     <script src="history-manager.js"></script>
     <script src="notifications.js"></script>
     <script src="audio-notifications.js"></script>
+    <script src="normativi.js"></script>
     <script src="peskarenje.js"></script>
 </body>
 </html>
