--- a/kalkulator-proizvodnje/index.html
+++ b/kalkulator-proizvodnje/index.html
@@ -85,6 +85,12 @@
                 <div class="menu-title">Преса "БЕМ"</div>
                 <div class="menu-description">Калкулација за БЕМ пресу</div>
             </a>
+
+            <a href="vreme-po-komadu.html" class="menu-card special">
+                <div class="menu-icon">⏱️</div>
+                <div class="menu-title">Време по Комаду</div>
+                <div class="menu-description">Израчунај време за један комад</div>
+            </a>
         </div>
 
         <div class="weather-widget-container">
