--- a/shark-web-player/index.html
+++ b/shark-web-player/index.html
@@ -27,7 +27,7 @@
             <div class="now-playing">
                 <div class="track-info">No track playing</div>
             </div>
-            <div class="timer">00:00:00</div>
+            <div class="timer">--:--:--</div>
         </div>
         <div class="player-main">
             <div class="control-section">
