--- a/index.html
+++ b/index.html
@@ -532,6 +532,29 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- Administracija Project -->
+					<div class="col-md-6 col-lg-4">
+						<div class="card h-100 border-0 shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title">Administracija</h5>
+								<p class="card-text">
+									Sistem za upravljanje administracijom sa modulima za korisnike, dokumente, obaveštenja i naprednim funkcionalnostima.
+								</p>
+								<div class="d-flex gap-2 mb-3">
+									<span class="badge bg-primary">HTML</span>
+									<span class="badge bg-info">CSS</span>
+									<span class="badge bg-secondary">JavaScript</span>
+								</div>
+								<a
+									href="Administracija/index.html"
+									class="btn btn-outline-primary w-100"
+									target="_blank"
+									>Pogledaj Projekat</a
+								>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
